--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,3 +53,6 @@ theme:
       toggle:
         icon: material/brightness-4
         name: Switch to light mode
+plugins:
+  - search
+  - awesome-pages
