--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ mkdocs-git-revision-date-localized-plugin
 mkdocs-pdf-export-plugin
 pymdown-extensions
 mkdocs-mermaid2-plugin
+mkdocs-awesome-pages-plugin
