--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,7 @@
 site_name: UNYKAD
 markdown_extensions:
   - admonition
+  - attr_list
   - pymdownx.details
   - pymdownx.superfences:
       custom_fences:
@@ -56,3 +57,4 @@ theme:
 plugins:
   - search
   - awesome-pages
+  - mkdocs-pdf
