--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,7 +9,7 @@ markdown_extensions:
           format: !!python/name:pymdownx.superfences.fence_code_format
   - pymdownx.tabbed:
       alternate_style: true
-copyright: UNYKAD. All Rights Reserved. © 2025.
+copyright: An idiot admires complexity, a genius admires simplicity.
 extra:
   generator: false
   social:
