added the creator of the quote

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,7 +9,7 @@ markdown_extensions:
           format: !!python/name:pymdownx.superfences.fence_code_format
   - pymdownx.tabbed:
       alternate_style: true
-copyright: An idiot admires complexity, a genius admires simplicity.
+copyright: An idiot admires complexity, a genius admires simplicity. - Terry Davis
 extra:
   generator: false
   social:
