modified structure in Passwortwiederherstellung

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,12 +12,12 @@ markdown_extensions:
 copyright: An idiot admires complexity, a genius admires simplicity. - Terry Davis
 extra:
   generator: false
-#  social:
-#    - icon: fontawesome/brands/instagram
+  social:
+    - icon: fontawesome/brands/instagram
 #      link: https://instagram.com/Unykad
-#    - icon: fontawesome/brands/tiktok
+    - icon: fontawesome/brands/tiktok
 #      link: https://tiktok.com/Unykad
-#    - icon: fontawesome/brands/x-twitter
+    - icon: fontawesome/brands/x-twitter
 #      link: https://x.com/Unykad
 theme:
   name: material
